--- a/src/client/index.html
+++ b/src/client/index.html
@@ -49,6 +49,7 @@
                 v-bind:imageid="imageId"
                 v-bind:savedtime="savedDate"
                 @close="handleCloseEvent"
+                @delete="handleImageDeletion"
             ></image-comp>
             <!-- v-on:imagechanged="handleImageChange" -->
 
