--- a/src/client/index.html
+++ b/src/client/index.html
@@ -47,6 +47,7 @@
             <image-comp 
                 v-if="showModal"
                 v-bind:imageid="imageId"
+                v-bind:commentid="commentid"
                 v-bind:savedtime="savedDate"
                 @close="handleCloseEvent"
                 @delete="handleImageDeletion"
